[package]
name = "wrusdummy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

wruster = { path ="../wruster"}
wruster_handlers = { path ="../wruster_handlers"}

log = "0.4.14"
env_logger = "0.8.4"
mime = "0.3.16"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
