[package]
name = "wruster"
version = "0.1.0"
edition = "2021"
rust-version = "1.63.0"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mime = "0.3.16"
atomic_refcell = "0.1.8"
log = "0.4.14"
env_logger = "0.8.4"
polling = "2.0.0"
url = "2.2.2"
crossbeam = "0.8"
cfg-if = "0.1"
rustls = "0.20.6"
rustls-pemfile = "1.0.0"

[dev-dependencies]
rcgen = "0.9.3"
